[tool.poetry]
name = "langchain-play"
version = "0.1.0"
description = "An example of how to wrap LangChain with FastAPI"
authors = ["Shane Witbeck <shane@digitalsanctum.com>"]
readme = "README.md"
packages = [{include = "langchain_play"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
langchain = "0.0.229"
fastapi = "^0.100.0"
newsapi-python = "^0.2.7"
uvicorn = "^0.22.0"
google-search-results = "^2.4.2"
yfinance = "^0.2.28"
sqlalchemy = "^2.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
