[tool.poetry]
name = "langchain-services"
version = "0.1.0"
description = "FastAPI endpoints backed by Langchain"
authors = ["Shane Witbeck <shane@digitalsanctum.com>"]
readme = "README.md"
packages = [{include = "langchain_services"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
langchain = "0.0.265"
fastapi = "^0.101.1"
newsapi-python = "^0.2.7"
uvicorn = "^0.23.2"
google-search-results = "^2.4.2"
yfinance = "^0.2.28"
sqlalchemy = "^2.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
