[tool.poetry]
name = "langchain-services"
version = "0.1.0"
description = "FastAPI endpoints backed by Langchain"
authors = ["Shane Witbeck <shane@digitalsanctum.com>"]
readme = "README.md"
packages = [{include = "langchain_services"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
langchain = "0.0.329"
fastapi = "^0.104.1"
fastapi-cors = "^0.0.6"
newsapi-python = "^0.2.7"
uvicorn = "^0.23.2"
google-search-results = "^2.4.2"
yfinance = "^0.2.28"
sqlalchemy = "^2.0.20"
peopledatalabs = "^3.0.0"
pydantic = "^2.4.2"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
